updated audio classifier script

--- a/phoneticSegmentationFeatureExtraction.ipynb
+++ b/phoneticSegmentationFeatureExtraction.ipynb
@@ -20,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# phonetic segmentation using pocketsphiinx\n",
-    "# feature extraction: MFCC + filterbank energy + Void"
+    "# feature extraction: MFCC + filterbank energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,9 @@
     "    \n",
     "    return mfcc_features, filterbank_features\n",
     "\n",
+    "# perform word segmentation\n",
     "def word_seg(file_path, verbose=True):\n",
+    "    # set parameters and dictionary\n",
     "    config = {\n",
     "        'hmm': os.path.join(model_path, 'en-us'),\n",
     "        'lm': os.path.join(model_path, 'en-us.lm.bin'),\n",
@@ -165,6 +167,7 @@
     "        \n",
     "    return segs_and_phonemes\n",
     "\n",
+    "# perform phoneme recognition\n",
     "def phoneme_seg(file_path, verbose=True):\n",
     "    # Create a decoder with a certain model\n",
     "    config = pocketsphinx.Decoder.default_config()\n",
@@ -192,6 +195,7 @@
     "        \n",
     "    return segs\n",
     "\n",
+    "# extract MFCC and filterbank energy feature\n",
     "def extract_feature(mfcc_features, filterbank_features,  word_segments, phoneme_segments):\n",
     "    # feature array\n",
     "    # first (mfcc_features.shape[1]+filterbank_features.shape[1])) elements are for the first phoneme\n",
@@ -241,6 +245,36 @@
     "            result[0,phoneme_to_index[p]*feature_length_for_each_phoneme:(phoneme_to_index[p]+1)*feature_length_for_each_phoneme] = np.concatenate((m_features[p], f_features[p]), axis=0).reshape(1,-1)\n",
     "        \n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hypothesis: my voice is my password\n",
+      "Detailed segments:\n",
+      "('<s>', 0, 0, 3)\n",
+      "('my', -1527, 4, 16)\n",
+      "('voice', -1, 17, 47)\n",
+      "('is', 0, 48, 65)\n",
+      "('my', -9505, 66, 79)\n",
+      "('password', 0, 80, 134)\n",
+      "('</s>', 0, 135, 152)\n",
+      "Segments Phonemes: [('<s>', 'SIL', 0, 3), ('my', 'M AY', 4, 16), ('voice', 'V OY S', 17, 47), ('is', 'IH Z', 48, 65), ('my', 'M AY', 66, 79), ('password', 'P AE S W ER D', 80, 134), ('</s>', 'SIL', 135, 152)]\n",
+      "Best phonetic segments: [('SIL', 0, 3), ('L', 4, 9), ('AY', 10, 16), ('V', 17, 25), ('OY', 26, 36), ('Z', 37, 47), ('IH', 48, 56), ('S', 57, 65), ('L', 66, 71), ('EH', 72, 78), ('L', 79, 85), ('AA', 86, 98), ('Z', 99, 107), ('OY', 108, 123), ('TH', 124, 134), ('V', 135, 152)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example: T_1000003.wav\n",
+    "print(\"example file: T_1000003.wav\")\n",
+    "word_segments = word_seg(os.path.join(training_data_path, fileName), verbose=True)\n",
+    "phoneme_segments = phoneme_seg(os.path.join(training_data_path, fileName), verbose=True)"
    ]
   },
   {
@@ -320,7 +354,7 @@
     "        labels[sample_count] = label\n",
     "        sample_count += 1\n",
     "        \n",
-    "        if sample_count%100 == 0:\n",
+    "        if sample_count%50 == 0:\n",
     "            print(\"processing sample \" + str(sample_count))"
    ]
   },
@@ -330,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change 0 into mean values of non-zero elements for each column\n",
+    "# change 0 (missing value) into mean values of non-zero elements for each column\n",
     "column_mean = np.true_divide(features_for_all_samples.sum(0),(features_for_all_samples!=0).sum(0))\n",
     "inds = np.where(features_for_all_samples == 0)\n",
     "# replace the index\n",
